--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <p><strong>Local:</strong> Rua rio velho 980 paranaguamirim</p>
         </div>
         <!-- Link para WhatsApp com a mensagem de confirmação -->
-        <a href="https://wa.me/47999111018?text=Oi%20Tonho%2C%20confirmo%20minha%20presença!%20" target="_blank">
+        <a href="https://wa.me/47999111018?text=Oi%20Tonho%2C%20confirmo%20minha%20presença%20no%20aniversário!%20" target="_blank">
             <button class="button">Confirmar Presença</button>
         </a>
     </div>
